# urph-fin

./: .gitignore  .gitmodules  README.md  package-lock.json
cxx/: CMakeLists.txt  google-services.json
cxx/CMake/: internal_utils.cmake
cxx/cli/: CMakeLists.txt
cxx/cli/src/: broker.cc  cli.hh  funds.cc  main.cc  stock.cc
cxx/urph-fin-core/: CMakeLists.txt
cxx/urph-fin-core-dart/: CMakeLists.txt  dart.cc
cxx/urph-fin-core/cloud-src/: dynamodb.cc  firestore.cc  mongodb.cc
cxx/urph-fin-core/cloud_src/: dynamodb.cc  firestore.cc
cxx/urph-fin-core/mkt-data-src/yahoo-finance/: curl_utils.cpp  quote.cpp  quote.hpp  spot.cpp  spot.hpp
cxx/urph-fin-core/src/: core.cc  stock.cc  urph-fin-core.h  urph-fin-core.hxx  utils.hxx
cxx/urph-fin-core/src/cloud/: cloud.hxx  firestore.cc
cxx/urph-fin-core/src/core/: core.cc  core_internal.hxx  stock.cc  stock.hxx  urph-fin-core.h  urph-fin-core.hxx
cxx/urph-fin-core/src/storage/: aws.org  firestore.cc  storage.cc  storage.hxx
cxx/urph-fin-core/test/: tests.cc
electron-app/: package-lock.json  package.json  rollup.config.js  tailwind.config.js
electron-app/public/: index.html
electron-app/src/electron/: index.ts
electron-app/src/frontend/: App.svelte  main.ts  tsconfig.json
electron-app/src/frontend/components/: Crypto.svelte  Funds.svelte  Overview.svelte  Stocks.svelte
electron-app/src/frontend/share/: ModalDlg.svelte
flutter-app/: README.md  pubspec.yaml
flutter-app/android/: CMakeLists.txt
flutter-app/android/app/: build.gradle
flutter-app/android/app/src/main/: AndroidManifest.xml
flutter-app/android/app/src/main/kotlin/com/murphytalk/urph_fin/: MainActivity.kt
flutter-app/android/app/src/profile/: AndroidManifest.xml
flutter-app/android/cxx/: CMakeLists.txt  android.cc
flutter-app/ios/Runner/: Info.plist
flutter-app/ios/Runner.xcodeproj/: project.pbxproj
flutter-app/lib/: dao.dart  dylib_utils.dart  main.dart  overview.dart  shared_widgets.dart  utils.dart
flutter-app/linux/: CMakeLists.txt  my_application.cc
flutter-app/test/: function_test.dart  widget_test.dart
flutter-app/windows/: CMakeLists.txt
flutter-app/windows/runner/: Runner.rc  main.cpp
